--- a/index.html
+++ b/index.html
@@ -8,4 +8,18 @@
 <body>
     <H1>sobre a barbearia alura</H1>
     <p>localizada no coração da cidade a <strong>barbearia do saitama</strong>traz para o mercado o que ha de melhor para o seu cabelo e barba.fundada em 2019,a barbearia saitama ja e destaque ma cidade e conquista novos clientes a cada dia.</p>
-    
+   <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>      
+</body>
+</html>
+
+style.css
+body {
+    background: #e41d1d;
+    text-align: center;
+}
+
+strong {
+    font-size: 35px;
+    color: azure;
+}
+  
